loginSignup full functioning
